# MSCS-532-M20-Assignment-5

./: .gitignore  README.md  pyproject.toml
outputs/data/: benchmark_detailed.csv  summary_mean_runtimes.csv  summary_std_runtimes.csv
src/: empirical_analysis.py  main.py  plot_results.py  quicksort.py
src/utils/: __init__.py  dataset_utils.py  file_utils.py  metrics_utils.py  partition.py  plot_utils.py
tests/: test_metrics_utils.py  test_partition.py  test_quicksort.py
